--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-	<title>Carnivore Devours Menu</title>
+	<title>Tasty Burger Menu</title>
 </head>
 
 <body>
-	<img src="/assets/img/cute_burger.jpeg" width="400px" id="cute_burger">
+	<img src="http://www.azmeme.com/wp-content/uploads/2016/07/This-is-A-TASTY-BURGER.jpg" width="400px" id="cute_burger">
 
 	{{{ body }}}
 
