--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 	<footer class="burgerFooter">
 		<div class="footer-copyright">
 			<div class="container">
-				<span class="grey-text text-lighten-4">© 2017 angrbrd entertainment</span>
+				<span class="grey-text text-lighten-4">© 2018 DJ Turner Homework</span>
 				<a class="grey-text text-lighten-4 right" href="https://github.com/DJGilmore4U">Reference Work</a>
 			</div>
 		</div>
